# QueueWithThreadWorkers

./: .gitignore  CMakeLists.txt  IThreadWorker.cpp  IThreadWorker.h  ImessageQueueEvents.h  MessageQueue.h  README.doc  README.md  Reader.h  RingBuffer.h  RingBuffer2.h  ThreadWorker.h  ThreadsManager.h  Writer.h  main.cpp
